# optframe

./: .gitignore  README.md  __init__.py  config.json  evaluator.py  executor.py  ga_bool.py  p3_bool.py  p3_tsp.py  p3config.py  run.py  run_bool.py  run_tsp.py  search.sh
algorithms/: __init__.py
boolean/: boolean.c  boolean.py
common/: best_store.py  binary_to_float_evaluator.py  constants.py  cpv.py  evaluation_counter.py  evaluation_history.py  evaluator_exception.py  execution_container.py  execution_result.py  fitness.py  genotype.py  initializer.py  iteration_counter.py  limit.py  lt_population.py  pyramide.py  solution.py  solution_buffer.py  solution_writer.py
config/: boolean.config.json  cga.config.json  dt-pcga.config.json  gaconfig_bool.ini  ltga-dt.config.json  ltga.config.json  multiple.config.json  one_max.config.json  p3.config.json  p3config_bool.ini  p3config_tsp.ini  pboa.config.json  pcga.config.json  pga.config.json  test.config.json  tsp.config.json
data/: p3config.ini  p3configA.ini
evaluator/: bool_array.py  problems.py  tsp.py
executors/: __init__.py
ga/: gaconfig.py  gaengine.py
helpers/: __init__.py  arguments.py  array_tools.py  binary_to_float.py  calculator.py  dict_wrapper.py  dot_generator.py  grid_search.py  iniconfig.py  load_package.py  loader.py  memory.py  path.py  printer.py  setter.py  solution_writer.py
problems/pipeline/: CMakeLists.txt  config.json  deme.txt  evaluator.cpp  evaluator.py  solution_operator.py  utils.hpp
problems/pipeline/input/: genotype1.txt  genotype2.txt  genotype3448.txt  sbox_real.txt
(+276 files in other folders)
